force-app/main/default/objects/Grant_type__mdt/Grant_type__mdt.object-meta.xml
<CustomObject>
    <description>Information associated with particular proposal app types</description>
    <label>App type</label>
    <pluralLabel>App types</pluralLabel>
</CustomObject>