force-app/main/default/objects/Grant_type__mdt/fields/Application_form_name__c.field-meta.xml
<CustomField>
    <fullName>Application_form_name__c</fullName>
    <description>Name of application form used for this grant type (default application for this grant type for self-registering grant communities).</description>
    <inlineHelpText>Name of application form used for this grant type (default application for this grant type for self-registering grant communities).</inlineHelpText>
    <label>Application form name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>