force-app/main/default/objects/Grant_type__mdt/fields/Default_custom_reqs_name__c.field-meta.xml
<CustomField>
    <fullName>Default_custom_reqs_name__c</fullName>
    <description>The name of the default custom reqs for the given grant type</description>
    <inlineHelpText>The name of the default custom reqs for the given grant type</inlineHelpText>
    <label>Default custom reqs name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>