force-app/main/default/objects/Grant_type__mdt/fields/FS_Group__c.field-meta.xml
<CustomField>
    <fullName>FS_Group__c</fullName>
    <description>Fiscally sponsored group to which this app type applies.</description>
    <label>FS Group</label>
    <referenceTo>FS_Group_Settings__mdt</referenceTo>
    <relationshipName>App_types</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>